# DariaCPP

./: .gitignore  CMakeLists.txt  cycles.cpp  cycles.h  main.cpp
cpp_homeworks/: classwork2026_06_23.cpp  classwork2026_06_23.h  homework_2026_06_06.cpp  homework_2026_06_06.h
